--- a/register.css
+++ b/register.css
@@ -36,12 +36,13 @@
     background-color: black;
     max-width: 100%;
     max-height: 100%;
-    padding: 15.1% 18%;
+    padding: 13.8% 18%;
     /* padding: 233px 300px 235px 300px; */
     border-radius: 20px 0 0 20px;
 }
-.login input[type="email"],
+.login input[type="text"],
 .login input[type="password"],
+.login input[type="email"],
 .login button {
     width: 150%;
     padding: 10px;
@@ -54,8 +55,9 @@
     color: white;
 }
 
-.login input[type="email"]::placeholder,
-.login input[type="password"]::placeholder {
+.login input[type="text"]::placeholder,
+.login input[type="password"]::placeholder,
+.login input[type="email"]::placeholder {
     color: whitesmoke; /* Set placeholder text color to white */
 }
 
